# biophysics-utilities

biocalc/: README.md  __init__.py  __main__.py  constants.py  examples.sh  parser.py  repl.py  requirements.txt  setup.py  units.py
biocalc/biocalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
biocalc/tests/: test_constants.py  test_parser.py  test_repl.py  test_units.py
biophysics-utilities/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
biophysics-utilities/docs/: architecture.md  index.md  parser_spec.md  solver_algorithms.md  usage.md  visualization_guide.md
biophysics-utilities/examples/: enzyme_kinetics.json  oscillating_reaction.rkp  parameter_sweep_demo.py  simple_mass_action.yaml
biophysics-utilities/scripts/: benchmark_solver.py  convert_to_sbml.py  run_example.sh
biophysics-utilities/src/kinetics_playground/: __init__.py
biophysics-utilities/src/kinetics_playground/api/: __init__.py  presets.py  reaction_network.py  simulation_session.py
biophysics-utilities/src/kinetics_playground/cli/: __init__.py  main.py  parser_cli.py  simulate_cli.py  visualize_cli.py
biophysics-utilities/src/kinetics_playground/core/: __init__.py  integrator.py  kinetics.py  model.py  parser.py  stoichiometry.py  validator.py
biophysics-utilities/src/kinetics_playground/utils/: __init__.py  exporters.py  logger.py  math_helpers.py  units.py
biophysics-utilities/src/kinetics_playground/visualization/: __init__.py  dashboard.py  layout.py  plotter.py
biophysics-utilities/src/reaction_kinetics_playground.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
biophysics-utilities/tests/: __init__.py  test_cli.py  test_integrator.py  test_kinetics.py  test_parser.py  test_visualization.py
brownian-motion-sim/: README.md  brownian_minimal.py  setup.py  setup.sh  tutorial.py
brownian-motion-sim/examples/: example_2d.py  example_3d.py
brownian-motion-sim/src/: __init__.py  cli.py  core.py  viz.py
brownian-motion-sim/tests/: test_core.py
diffusion-time-estimator/: QUICKSTART.md  README.md  setup.py
diffusion-time-estimator/diffusion_time_estimator/: __init__.py  __main__.py  constants.py  core.py  plot.py
diffusion-time-estimator/diffusion_time_estimator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
diffusion-time-estimator/diffusion_time_estimator/tests/: __init__.py  test_cli.py  test_core.py
diffusion-time-estimator/examples/: api_examples.py
electrostatic-potential-mapper/esp-mapper/: README.md  phi.npy  pyproject.toml
electrostatic-potential-mapper/esp-mapper/esp_mapper/: __init__.py
electrostatic-potential-mapper/esp-mapper/esp_mapper/src/: __init__.py  cli.py  coulomb.py  grid.py  pb_linear.py  reader.py  visualize.py
electrostatic-potential-mapper/esp-mapper/examples/: dna_phosphate.txt  water_dipole.txt
electrostatic-potential-mapper/esp-mapper/src/: __init__.py  cli.py  coulomb.py  grid.py  pb_linear.py  reader.py  visualize.py
electrostatic-potential-mapper/esp-mapper/tests/: test_coulomb.py  test_pb.py
forcefield-eval/: LICENSE  README.md  main.py  setup.py  validate.py
forcefield-eval/examples/: basic_usage.py  coulomb_example.txt  lj_vs_morse.txt
forcefield-eval/src/: __init__.py  cli.py  constants.py  derivatives.py  evaluator.py  plotter.py  potentials.py
forcefield-eval/tests/: __init__.py  test_potentials.py
lennard-jones playground/: LICENSE  README.md  demo.py  requirements.txt  setup.py
lennard-jones playground/examples/: lj_example_run.txt  lj_interactive_demo.ipynb
lennard-jones playground/src/: __init__.py  cli.py  gui.py  model.py  utils.py
lennard-jones playground/tests/: __init__.py  test_model.py
ligand-binding-thermodynamics-cli/: README.md  requirements.txt  setup.py
ligand-binding-thermodynamics-cli/examples/: example_session.txt
ligand-binding-thermodynamics-cli/src/: __init__.py  cli.py  constants.py  core.py  parser.py
ligand-binding-thermodynamics-cli/tests/: test_core.py
protein-hydration-shell-estimator/: README.md  demo.py  pyproject.toml  setup.py
protein-hydration-shell-estimator/examples/: protein_surface_example.txt
protein-hydration-shell-estimator/src/: __init__.py  cli.py  constants.py  model.py  utils.py
protein-hydration-shell-estimator/tests/: test_model.py
protein-shape estimator/protein_shape_estimator/: README.md  __init__.py  __main__.py  constants.py  core.py
protein-shape estimator/protein_shape_estimator/tests/: test_cli.py  test_core.py
stochastic-integrator visualizer/: LICENSE  README.md  requirements.txt  setup.py  streamlit_app.py
stochastic-integrator visualizer/stochastic_integrator_visualizer/: __init__.py  __main__.py  constants.py  core.py  visualize.py
stochastic-integrator visualizer/stochastic_integrator_visualizer/tests/: __init__.py  test_plot.py  test_solver.py
viscoelastic-response-analyzer/: README.md  pyproject.toml
viscoelastic-response-analyzer/outputs/: relax.json
viscoelastic-response-analyzer/tests/: test_models.py
viscoelastic-response-analyzer/viscoelastic_analyzer/: __init__.py  cli.py  models.py  plotting.py  solver.py
viscoelastic-response-analyzer/viscoelastic_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
