[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viscoelastic-analyzer"
version = "0.1.0"
description = "CLI utilities for computing viscoelastic relaxation and creep responses for Maxwell and Kelvin–Voigt models"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]
readme = "README.md"
authors = [
    { name = "Murari" }
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[project.scripts]
viscoelastic-analyzer = "viscoelastic_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
