[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-mapper"
version = "0.1.0"
description = "Electrostatic potential mapper (Coulomb and linearized PB)"
authors = [
  { name = "Your Name" }
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
esp-map = "src.cli:main"
